--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Sony | Teste</title>
+    <title>Sony | Z5</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <!-- jQuery library (served from Google) -->
@@ -15,51 +15,115 @@
   <body>
     <header>
       <div class="container">
-        <a style="text-decoration:none;" target="_blank" href="http://www.sony.com.br/">
-          <img src="http://image.e.sony.com.br/lib/fe901372756d067477/m/1/sony_logo_118x20px_branco.png" style="max-width:100%;" />
+        <a target="_blank" href="http://www.sony.com.br/">
+          <img src="http://image.e.sony.com.br/lib/fe901372756d067477/m/1/sony_logo_118x20px_branco.png" />
         </a>
       </div><!--.container-->
     </header>
     <div class="gray">
     </div><!--.gray-->
-    <div class="container part-one">
-      <div class="row">
-        <div class="col-md-6 col-md-push-6 cellphone jumbotron vertical-center description top">
-          <img src="img/celular1.jpg" class="cellphone" />
+    <div class="container">
+      <div class="product">
+        <div class="row">
+          <div class="col-md-6 col-md-push-6 photo-product">
+            <img src="img/celular1.jpg" />
+          </div>
+          <div class="col-md-6 col-md-pull-6">
+            <h4 class="center"><a target="_blank" href="#">Xperia™ Z5</a></h4>
+            <h3 class="center">Eu posso tirar a melhor foto com o disparo mais rápido</h3>
+            <p class="center">Câmera REVOLUCIONÁRIA e design inovador: conheça o smartphone com CÂMERA
+              de 23MP, disparo ultra rápido, até 2 dias de bateria e design à prova d'água*.</p>
+            <div class="opcoes-de-cor">
+              <p>Cores disponíveis</p>
+              <img src="img/blackicon.png" class="box-color" />
+            </div><!--.opcoes-de-cor-->
+          </div>
         </div>
-        <div class="col-md-6 col-md-pull-6 jumbotron vertical-center description">
-          <h4 class="center"><a href="#"><span class="bold-title">Xperia™ Z5</span></a></h4>
-          <h3 class="center"><span class="bold">Eu posso tirar a melhor foto com o disparo mais rápido</span></h3>
-          <p class="center text-one">Câmera REVOLUCIONÁRIA e design inovador: conheça o smartphone com CÂMERA
-            de 23MP, disparo ultra rápido, até 2 dias de bateria e design à prova d'água*.</p>
-          <div class="opcoes-de-cor">
-            <p class="option-color">Cores disponíveis</p>
-            <img src="img/blackicon.png" class="color" />
-          </div><!--.icons-->
+      </div><!--.product-->
+      <div class="box-slider">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>Não perca nenhum movimento</h3>
+            <h4>Capture os momentos que passam em um piscar de olhos com nosso autofoco mais rápido</h4>
+            <p>
+              Com o Xperia Z5, você captura as melhores oportunidades de foto que a vida tem a oferecer,
+              antes que elas passem por você. Com o disparo rápido (autofoco híbrido), nosso melhor celular
+              com câmera já lançado reúne velocidade e precisão. Combinado com os 23 MP e um avançado
+              zoom de imagem que aumenta em até cinco vezes, o Xperia Z5 é capaz de capturar até os
+              momentos mais passageiros com uma clareza impressionante e na primeira tentativa.
+            </p>
+          </div>
         </div>
-      </div><!--.row-->
-    </div><!--part-one-->
-    <div class="container part-two">
-      <div class="row">
-        <div class="col-md-8 jumbotron">
-          <h3><span class="bold">Não perca nenhum movimento</span></h3>
-          <h4>Capture os momentos que passam em um piscar de olhos com nosso autofoco mais rápido</h4>
-          <p class="text-one">
-            Com o Xperia Z5, você captura as melhores oportunidades de foto que a vida tem a oferecer,
-            antes que elas passem por você. Com o disparo rápido (autofoco híbrido), nosso melhor celular
-            com câmera já lançado reúne velocidade e precisão. Combinado com os 23 MP e um avançado
-            zoom de imagem que aumenta em até cinco vezes, o Xperia Z5 é capaz de capturar até os
-            momentos mais passageiros com uma clareza impressionante e na primeira tentativa.
-          </p>
+        <div class="carrossel">
+          <ul class="bxslider">
+            <li><img src="img/carrossel1.jpg" /></li>
+            <li><img src="img/carrossel2.jpg" /></li>
+            <li><img src="img/carrossel3.jpg" /></li>
+          </ul>
         </div>
-      </div>
-      <div class="container carrossel" style="max-width:941px; padding:0 45px;">
-        <ul class="bxslider" style="align:center;">
-          <li><img src="img/carrossel1.jpg" /></li>
-          <li><img src="img/carrossel2.jpg" /></li>
-          <li><img src="img/carrossel3.jpg" /></li>
-        </ul>
-      </div>
-    </div><!--part-two-->
+      </div><!--.box-slider-->
+      <div class="box-one">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>Ilumine a noite</h3>
+            <h4>A melhor tecnologia de baixa luminosidade da Sony em um celular com câmera</h4>
+            <p>
+              Não perca a magia da noite graças ao Xperia Z5. Equipado com a próxima  geração de sensores de imagem
+              da Sony, você pode capturar belas cenas noturnas exatamente como as vê. Sem os ruídos ou desfoques usuais
+            </p>
+            <p>
+              Confira as fotos tiradas com o Xperia
+            </p>
+          </div>
+        </div>
+        <div class="photos">
+          <img src="img/foto1.jpg" />
+        </div><!--.photos-->
+      </div><!--.box-one-->
+      <div class="box-two">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-4 invert-text">
+            <h3>Design confortável</h3>
+            <p>
+              Com uma estrutura de metal leve, desenho suave e simplificado e parte traseira
+              em vidro fosco, o Xperia Z5 é ao mesmo tempo bonito e confortável de segurar
+            </p>
+          </div>
+        </div>
+        <div class="photos">
+          <img src="img/foto2.jpg" />
+        </div><!--.photos-->
+      </div><!--.box-two-->
+      <div class="box-four">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>O telefone que o reconhece</h3>
+            <p>
+              O botão liga/desliga do Xperia Z5 apresenta nosso novo sensor de impressão digital integrado.
+              O botão foi intuitivamente colocado na lateral do celular para que você
+              possa pegar e desbloquear com segurança em um único movimento.
+            </p>
+          </div>
+        </div>
+        <div class="photos">
+          <img src="img/foto4.jpg" />
+        </div><!--.photos-->
+      </div><!--.box-four-->
+      <div class="box-five">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-4 invert-text">
+            <h3>E se todos os dias durassem mais?</h3>
+            <h4>Faça mais com até dois dias de duração da bateria</h4>
+            <p>
+              O Xperia Z5 oferece a você até dois dias** de bateria no modo STAMINA.
+              Ouça mais músicas,converse por dias e fique fora de casa por mais tempo sem se preocupar.
+            </p>
+          </div>
+        </div>
+        <div class="photos">
+          <img src="img/foto5.jpg" />
+        </div><!--.photos-->
+      </div><!--.box-five-->
+    </div><!--.container-->
   </body>
 </html>
