--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
           <img src="img/foto2.jpg" />
         </div><!--.photos-->
       </div><!--.box-two-->
+      <div class="box-three">
+        <div class="row">
+          <div class="col-md-12 middletext">
+            <h3>Nem liga para chuvas</h3>
+            <h4>Com o design à prova d'água e de poeira, você não precisa deixar de fazer nada por causa da chuva</h4>
+            <p>
+              Chuvas inesperadas acontecem, assim como quedas na pia e copos derramados.
+              O Xperia Z5 tem o design à prova d'água* líder da Sony e uma classificação IP68.
+              Porque um pouco de água não deveria acabar com o seu dia.
+            </p>
+          </div>
+        </div>
+        <div class="photos">
+          <img src="img/foto3.jpg" />
+        </div><!--.photos-->
+      </div><!--.box-three-->
       <div class="box-four">
         <div class="row">
           <div class="col-md-8">
@@ -124,6 +140,37 @@
           <img src="img/foto5.jpg" />
         </div><!--.photos-->
       </div><!--.box-five-->
+      <div class="icons-bottom">
+        <div class="row">
+          <div class="col-md-4 middletext">
+            <img src="img/bottomicon1.jpg" />
+            <h4>Apenas o melhor som</h4>
+            <p>
+              Com suporte a DNC e áudio de alta resolução, você pode ouvir a música da forma que
+              ela foi imaginada e bloquear todo o resto.
+            </p>
+            <a target="_blank" href="#">Saiba mais sobre o som</a>
+          </div>
+          <div class="col-md-4 middletext">
+            <img src="img/bottomicon2.jpg" />
+            <h4>Cores mais brilhantes</h4>
+            <p>
+              Tudo o que você vê fica mais vívido nessa tela Full HD com as tecnologias
+              incorporadas das TVs BRAVIA da Sony.
+            </p>
+            <a target="_blank" href="#">Saiba mais sobre nossas telas</a>
+          </div>
+          <div class="col-md-4 middletext">
+            <img src="img/bottomicon3.jpg" />
+            <h4>Jogue em qualquer lugar</h4>
+            <p>
+              Com o PS4™ Remote Play, você acessa seu console PS4 por meio de seu smartphone
+              e continua o jogo de qualquer lugar.
+            </p>
+            <a target="_blank" href="#">Saiba mais sobre o Remote Play</a>
+          </div>
+        </div>
+      </div><!--.icons-bottom-->
     </div><!--.container-->
   </body>
 </html>
