--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="icons-bottom">
         <div class="row">
           <div class="col-md-4 middletext">
-            <img src="img/bottomicon1.jpg" />
+            <span><img src="img/bottomicon1.jpg" /></span>
             <h4>Apenas o melhor som</h4>
             <p>
               Com suporte a DNC e áudio de alta resolução, você pode ouvir a música da forma que
@@ -152,7 +152,7 @@
             <a target="_blank" href="#">Saiba mais sobre o som</a>
           </div>
           <div class="col-md-4 middletext">
-            <img src="img/bottomicon2.jpg" />
+            <span class="icontwo"><img src="img/bottomicon2.jpg" /></span>
             <h4>Cores mais brilhantes</h4>
             <p>
               Tudo o que você vê fica mais vívido nessa tela Full HD com as tecnologias
@@ -161,7 +161,7 @@
             <a target="_blank" href="#">Saiba mais sobre nossas telas</a>
           </div>
           <div class="col-md-4 middletext">
-            <img src="img/bottomicon3.jpg" />
+            <span><img src="img/bottomicon3.jpg" /></span>
             <h4>Jogue em qualquer lugar</h4>
             <p>
               Com o PS4™ Remote Play, você acessa seu console PS4 por meio de seu smartphone
