--- a/index.html
+++ b/index.html
@@ -62,84 +62,135 @@
           </ul>
         </div>
       </div><!--.box-slider-->
-      <div class="box-one">
+      <div class="icons-top">
         <div class="row">
-          <div class="col-md-8">
-            <h3>Ilumine a noite</h3>
-            <h4>A melhor tecnologia de baixa luminosidade da Sony em um celular com câmera</h4>
+          <div class="col-md-6 middletext">
+            <span class="topicons"><img src="img/topicon1.jpg" /></span>
+            <h4>Autofoco híbrido</h4>
             <p>
-              Não perca a magia da noite graças ao Xperia Z5. Equipado com a próxima  geração de sensores de imagem
-              da Sony, você pode capturar belas cenas noturnas exatamente como as vê. Sem os ruídos ou desfoques usuais
+              O Xperia Z5 proporciona um autofoco de 0,03 segundos incrivelmente rápido e preciso,
+              combinando duas tecnologias diferentes
             </p>
+            <a target="_blank" href="#">Saiba mais</a>
+          </div>
+          <div class="col-md-6 middletext">
+            <span class="topicons"><img src="img/topicon2.jpg" /></span>
+            <h4>Zoom mais nítido</h4>
             <p>
-              Confira as fotos tiradas com o Xperia
+              Chegue cinco vezes mais perto do objeto sem perder a qualidade,
+              graças à potência dos sensores e das lentes e à exclusiva
+              tecnologia Clear Image Zoom das câmeras Sony.
+            </p>
+            <a target="_blank" href="#">Saiba mais</a>
+          </div>
+        </div>
+      </div><!--.icons-top-->
+    </div><!--.container-->
+    <div class="icons-middle lightblue">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 readmore">
+            <span class="middleicons"><img src="img/iconmiddle1.jpg" /></span>
+            <p class="mini-text">
+              "Conferimos o foco do Xperia Z5 e ele é incrivelmente rápido, tanto quando
+              usamos o foco por toque quanto com o autofoco."<br />
+              <a target="_blank" href="#">Leia a avaliação completa da Pocket-lint</a>
+            </p>
+          </div>
+          <div class="col-md-6 readmore">
+            <span class="middleicons"><img src="img/iconmiddle2.jpg" /></span>
+            <p class="mini-text">
+              "Câmeras rápidas e de alta resolução, além de uma tela detalhada, deixam
+              a Sony pronta para encarar a Apple."<br />
+              <a target="_blank" href="#">Leia a avaliação completa do Xperia Z5</a>
             </p>
           </div>
         </div>
-        <div class="photos">
-          <img src="img/foto1.jpg" />
-        </div><!--.photos-->
-      </div><!--.box-one-->
-      <div class="box-two">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-4 invert-text">
-            <h3>Design confortável</h3>
-            <p>
-              Com uma estrutura de metal leve, desenho suave e simplificado e parte traseira
-              em vidro fosco, o Xperia Z5 é ao mesmo tempo bonito e confortável de segurar
-            </p>
-          </div>
-        </div>
-        <div class="photos">
-          <img src="img/foto2.jpg" />
-        </div><!--.photos-->
-      </div><!--.box-two-->
-      <div class="box-three">
-        <div class="row">
-          <div class="col-md-12 middletext">
-            <h3>Nem liga para chuvas</h3>
-            <h4>Com o design à prova d'água e de poeira, você não precisa deixar de fazer nada por causa da chuva</h4>
-            <p>
-              Chuvas inesperadas acontecem, assim como quedas na pia e copos derramados.
-              O Xperia Z5 tem o design à prova d'água* líder da Sony e uma classificação IP68.
-              Porque um pouco de água não deveria acabar com o seu dia.
-            </p>
-          </div>
-        </div>
-        <div class="photos">
-          <img src="img/foto3.jpg" />
-        </div><!--.photos-->
-      </div><!--.box-three-->
-      <div class="box-four">
-        <div class="row">
-          <div class="col-md-8">
-            <h3>O telefone que o reconhece</h3>
-            <p>
-              O botão liga/desliga do Xperia Z5 apresenta nosso novo sensor de impressão digital integrado.
-              O botão foi intuitivamente colocado na lateral do celular para que você
-              possa pegar e desbloquear com segurança em um único movimento.
-            </p>
-          </div>
-        </div>
-        <div class="photos">
-          <img src="img/foto4.jpg" />
-        </div><!--.photos-->
-      </div><!--.box-four-->
-      <div class="box-five">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-4 invert-text">
-            <h3>E se todos os dias durassem mais?</h3>
-            <h4>Faça mais com até dois dias de duração da bateria</h4>
-            <p>
-              O Xperia Z5 oferece a você até dois dias** de bateria no modo STAMINA.
-              Ouça mais músicas,converse por dias e fique fora de casa por mais tempo sem se preocupar.
-            </p>
-          </div>
-        </div>
-        <div class="photos">
-          <img src="img/foto5.jpg" />
-        </div><!--.photos-->
-      </div><!--.box-five-->
+      </div><!--.container-->
+    </div><!--.icons-middle-->
+    <div class="lightgray">
+      <div class="container">
+          <div class="box-one">
+            <div class="row">
+              <div class="col-md-8">
+                <h3>Ilumine a noite</h3>
+                <h4>A melhor tecnologia de baixa luminosidade da Sony em um celular com câmera</h4>
+                <p>
+                  Não perca a magia da noite graças ao Xperia Z5. Equipado com a próxima  geração de sensores de imagem
+                  da Sony, você pode capturar belas cenas noturnas exatamente como as vê. Sem os ruídos ou desfoques usuais
+                </p>
+                <p>
+                  Confira as fotos tiradas com o Xperia
+                </p>
+              </div>
+            </div>
+            <div class="photos">
+              <img src="img/foto1.jpg" />
+            </div><!--.photos-->
+          </div><!--.box-one-->
+          <div class="box-two">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-4 invert-text">
+                <h3>Design confortável</h3>
+                <p>
+                  Com uma estrutura de metal leve, desenho suave e simplificado e parte traseira
+                  em vidro fosco, o Xperia Z5 é ao mesmo tempo bonito e confortável de segurar
+                </p>
+              </div>
+            </div>
+            <div class="photos">
+              <img src="img/foto2.jpg" />
+            </div><!--.photos-->
+          </div><!--.box-two-->
+          <div class="box-three">
+            <div class="row">
+              <div class="col-md-12 middletext">
+                <h3>Nem liga para chuvas</h3>
+                <h4>Com o design à prova d'água e de poeira, você não precisa deixar de fazer nada por causa da chuva</h4>
+                <p>
+                  Chuvas inesperadas acontecem, assim como quedas na pia e copos derramados.
+                  O Xperia Z5 tem o design à prova d'água* líder da Sony e uma classificação IP68.
+                  Porque um pouco de água não deveria acabar com o seu dia.
+                </p>
+              </div>
+            </div>
+            <div class="photos">
+              <img src="img/foto3.jpg" />
+            </div><!--.photos-->
+          </div><!--.box-three-->
+          <div class="box-four">
+            <div class="row">
+              <div class="col-md-8">
+                <h3>O telefone que o reconhece</h3>
+                <p>
+                  O botão liga/desliga do Xperia Z5 apresenta nosso novo sensor de impressão digital integrado.
+                  O botão foi intuitivamente colocado na lateral do celular para que você
+                  possa pegar e desbloquear com segurança em um único movimento.
+                </p>
+              </div>
+            </div>
+            <div class="photos">
+              <img src="img/foto4.jpg" />
+            </div><!--.photos-->
+          </div><!--.box-four-->
+          <div class="box-five">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-4 invert-text">
+                <h3>E se todos os dias durassem mais?</h3>
+                <h4>Faça mais com até dois dias de duração da bateria</h4>
+                <p>
+                  O Xperia Z5 oferece a você até dois dias** de bateria no modo STAMINA.
+                  Ouça mais músicas,converse por dias e fique fora de casa por mais tempo sem se preocupar.
+                </p>
+              </div>
+            </div>
+            <div class="photos">
+              <img src="img/foto5.jpg" />
+            </div><!--.photos-->
+          </div><!--.box-five-->
+      </div><!--.container-->
+    </div><!--.lightgray-->
+    <div class="container threeicons">
       <div class="icons-bottom">
         <div class="row">
           <div class="col-md-4 middletext">
