--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <div class="col-md-6 col-md-push-6 photo-product">
             <img src="img/celular1.jpg" />
           </div>
-          <div class="col-md-6 col-md-pull-6">
-            <h4 class="center"><a target="_blank" href="#">Xperia™ Z5</a></h4>
-            <h3 class="center">Eu posso tirar a melhor foto com o disparo mais rápido</h3>
-            <p class="center">Câmera REVOLUCIONÁRIA e design inovador: conheça o smartphone com CÂMERA
+          <div class="col-md-6 col-md-pull-6 text-start">
+            <h4 class="center"><a target="_blank" href="#" class="model"><strong>Xperia™ Z5</strong></a></h4>
+            <h3 class="center"><strong>Eu posso tirar a melhor foto com o disparo mais rápido</strong></h3>
+            <p class="center black">Câmera REVOLUCIONÁRIA e design inovador: conheça o smartphone com CÂMERA
               de 23MP, disparo ultra rápido, até 2 dias de bateria e design à prova d'água*.</p>
             <div class="opcoes-de-cor">
               <p>Cores disponíveis</p>
@@ -40,12 +40,17 @@
           </div>
         </div>
       </div><!--.product-->
+      <div class="social" style="height:500px;">
+        <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://www.facebook.com/plugins/like.php?href=https://www.facebook.com/SonyBrasil&layout=standard&show_faces=false&width=380&action=like&colorscheme=light&height=25" style="border:none; overflow:hidden; width:250px; height:25px;"></iframe>
+        <a href="https://twitter.com/sonybrasil" class="twitter-follow-button" data-show-count="false" data-lang="pt" data-show-screen-name="false">Seguir @sonybrasil</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </div>
       <div class="box-slider">
-        <div class="row">
+        <div class="row start">
           <div class="col-md-8">
-            <h3>Não perca nenhum movimento</h3>
+            <h3><strong>Não perca nenhum movimento</strong></h3>
             <h4>Capture os momentos que passam em um piscar de olhos com nosso autofoco mais rápido</h4>
-            <p>
+            <p class="black">
               Com o Xperia Z5, você captura as melhores oportunidades de foto que a vida tem a oferecer,
               antes que elas passem por você. Com o disparo rápido (autofoco híbrido), nosso melhor celular
               com câmera já lançado reúne velocidade e precisão. Combinado com os 23 MP e um avançado
@@ -110,16 +115,16 @@
     </div><!--.icons-middle-->
     <div class="lightgray">
       <div class="container">
-          <div class="box-one">
+          <div class="box-one box">
             <div class="row">
               <div class="col-md-8">
-                <h3>Ilumine a noite</h3>
+                <h3><strong>Ilumine a noite</strong></h3>
                 <h4>A melhor tecnologia de baixa luminosidade da Sony em um celular com câmera</h4>
-                <p>
+                <p class="black">
                   Não perca a magia da noite graças ao Xperia Z5. Equipado com a próxima  geração de sensores de imagem
-                  da Sony, você pode capturar belas cenas noturnas exatamente como as vê. Sem os ruídos ou desfoques usuais
+                  da Sony, você pode capturar belas cenas noturnas exatamente como as vê. Sem os ruídos ou desfoques usuais.
                 </p>
-                <p>
+                <p class="confere">
                   Confira as fotos tiradas com o Xperia
                 </p>
               </div>
@@ -128,11 +133,11 @@
               <img src="img/foto1.jpg" />
             </div><!--.photos-->
           </div><!--.box-one-->
-          <div class="box-two">
+          <div class="box-two box">
             <div class="row">
               <div class="col-md-8 col-md-offset-4 invert-text">
-                <h3>Design confortável</h3>
-                <p>
+                <h3><strong>Design confortável</strong></h3>
+                <p class="black">
                   Com uma estrutura de metal leve, desenho suave e simplificado e parte traseira
                   em vidro fosco, o Xperia Z5 é ao mesmo tempo bonito e confortável de segurar
                 </p>
@@ -142,12 +147,12 @@
               <img src="img/foto2.jpg" />
             </div><!--.photos-->
           </div><!--.box-two-->
-          <div class="box-three">
+          <div class="box-three box">
             <div class="row">
               <div class="col-md-12 middletext">
-                <h3>Nem liga para chuvas</h3>
+                <h3><strong>Nem liga para chuvas</strong></h3>
                 <h4>Com o design à prova d'água e de poeira, você não precisa deixar de fazer nada por causa da chuva</h4>
-                <p>
+                <p class="black">
                   Chuvas inesperadas acontecem, assim como quedas na pia e copos derramados.
                   O Xperia Z5 tem o design à prova d'água* líder da Sony e uma classificação IP68.
                   Porque um pouco de água não deveria acabar com o seu dia.
@@ -158,11 +163,11 @@
               <img src="img/foto3.jpg" />
             </div><!--.photos-->
           </div><!--.box-three-->
-          <div class="box-four">
+          <div class="box-four box">
             <div class="row">
               <div class="col-md-8">
-                <h3>O telefone que o reconhece</h3>
-                <p>
+                <h3><strong>O telefone que o reconhece</strong></h3>
+                <p class="black">
                   O botão liga/desliga do Xperia Z5 apresenta nosso novo sensor de impressão digital integrado.
                   O botão foi intuitivamente colocado na lateral do celular para que você
                   possa pegar e desbloquear com segurança em um único movimento.
@@ -176,9 +181,9 @@
           <div class="box-five">
             <div class="row">
               <div class="col-md-8 col-md-offset-4 invert-text">
-                <h3>E se todos os dias durassem mais?</h3>
+                <h3><strong>E se todos os dias durassem mais?</strong></h3>
                 <h4>Faça mais com até dois dias de duração da bateria</h4>
-                <p>
+                <p class="black">
                   O Xperia Z5 oferece a você até dois dias** de bateria no modo STAMINA.
                   Ouça mais músicas,converse por dias e fique fora de casa por mais tempo sem se preocupar.
                 </p>
@@ -193,35 +198,98 @@
     <div class="container threeicons">
       <div class="icons-bottom">
         <div class="row">
-          <div class="col-md-4 middletext">
+          <div class="col-md-4 middletext middle1">
             <span><img src="img/bottomicon1.jpg" /></span>
-            <h4>Apenas o melhor som</h4>
+            <h4><strong>Apenas o melhor som</strong></h4>
             <p>
               Com suporte a DNC e áudio de alta resolução, você pode ouvir a música da forma que
               ela foi imaginada e bloquear todo o resto.
             </p>
-            <a target="_blank" href="#">Saiba mais sobre o som</a>
+            <a target="_blank" href="#"><strong>Saiba mais sobre o som</strong></a>
           </div>
           <div class="col-md-4 middletext">
             <span class="icontwo"><img src="img/bottomicon2.jpg" /></span>
-            <h4>Cores mais brilhantes</h4>
+            <h4><strong>Cores mais brilhantes</strong></h4>
             <p>
               Tudo o que você vê fica mais vívido nessa tela Full HD com as tecnologias
               incorporadas das TVs BRAVIA da Sony.
             </p>
-            <a target="_blank" href="#">Saiba mais sobre nossas telas</a>
+            <a target="_blank" href="#"><strong>Saiba mais sobre nossas telas</strong></a>
           </div>
           <div class="col-md-4 middletext">
             <span><img src="img/bottomicon3.jpg" /></span>
-            <h4>Jogue em qualquer lugar</h4>
+            <h4><strong>Jogue em qualquer lugar</strong></h4>
             <p>
               Com o PS4™ Remote Play, você acessa seu console PS4 por meio de seu smartphone
               e continua o jogo de qualquer lugar.
             </p>
-            <a target="_blank" href="#">Saiba mais sobre o Remote Play</a>
+            <a target="_blank" href="#"><strong>Saiba mais sobre o Remote Play</strong></a>
           </div>
         </div>
       </div><!--.icons-bottom-->
+      <h3><strong>ESPECIFICAÇÕES</strong></h3>
+      <div class="line">
+      </div>
+      <div class="row bottom">
+        <div class="col-md-6">
+          <table>
+            <tr height="66" valign="top">
+              <td align="center">
+                <img src="img/miniicon1.png" />
+              </td>
+              <td class="table-text">
+                <p>Câmera de 23 MP com autofoco híbrido (0,03 s)</p>
+                <a href="#" target="_blank">Mais informações sobre a câmera</a>
+              </td>
+            </tr>
+            <tr height="96">
+              <td align="center">
+                <img src="img/miniicon2.png" />
+              </td>
+              <td class="table-text">
+                <p>Proteção contra água e poeira IP68*</p>
+                <a href="#" target="_blank">Mais informações sobre o dispositivo à prova d'água</a>
+              </td>
+            </tr>
+            <tr height="96">
+              <td align="center">
+                <img src="img/miniicon3.png" />
+              </td>
+              <td class="table-text">
+                <p>Duração da bateria de até dois dias**</p>
+                <a href="#" target="_blank">Mais informações sobre a bateria</a>
+              </td>
+            </tr>
+            <tr height="96">
+              <td align="center">
+                <img src="img/miniicon4.png" />
+              </td>
+              <td class="table-text">
+                <p>Processador octa-core Qualcomm® Snapdragon™ 810 de 64 bit</p>
+                <a href="#" target="_blank">Mais informações sobre a bateria</a>
+              </td>
+            </tr>
+            <tr height="96">
+              <td align="center">
+                <img src="img/miniicon5.png" />
+              </td>
+              <td class="table-text">
+                <p>Áudio de alta resolução com cancelamento de ruído digital</p>
+                <a href="#" target="_blank">Mais informações sobre som</a>
+              </td>
+            </tr>
+          </table>
+        </div><!--.col-md-6-->
+        <div class="col-md-5 col-md-offset-1 measure">
+          <table class="measures">
+            <tr height="451">
+              <td align="center" width="377">
+                <img src="img/measures.jpg" />
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div><!--.bottom-->
     </div><!--.container-->
   </body>
 </html>
