--- a/index.html
+++ b/index.html
@@ -317,11 +317,53 @@
           </table>
         </div>
       </div><!--.bottom-->
-      <div class="finalbottom">
-        <a href="#" target="_blank">Especificações completas</a>
-      </div>
+      <a href="#" target="_blank"><button class="finalbottom">
+        Especificações completas
+      </button></a>
     </div><!--.container-->
     <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-md-push-8 col-md-offset-1">
+            <table class="darkgray" height="85">
+              <tr align="center" class="noline">
+                <td width="180" height="60">
+                  <p class="segue">Siga-nos</p>
+                  <a class="iconsocial" href="https://www.facebook.com/SonyBrasil" target="_blank"><img src="img/iconface.png" /></a>
+                  <a class="iconsocial" href="https://twitter.com/sonybrasil" target="_blank"><img src="img/icontt.png" /></a>
+                  <a class="iconsocial" href="https://www.youtube.com/user/sonybrasil" target="_blank"><img src="img/iconytube.png" /></a>
+                </td>
+              </tr>
+            </table><!--.darkgray-->
+          </div>
+          <div class="col-md-8 col-md-pull-4">
+            <table>
+              <tr>
+                <td class="foot">
+                  <a href="#" target="_blank">Cookies</a>
+                  <a href="#" target="_blank">Fale conosco</a>
+                  <a href="#" target="_blank">Legal</a>
+                  <a href="#" target="_blank">Sustentabilidade</a>
+                  <a href="#" target="_blank">Software security</a>
+                  <a href="#" target="_blank">Mais sites Xperia</a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="#" target="_blank">Sobre a Sony</a>
+                  <a href="#" target="_blank">Sites de suporte da Sony</a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p class="copy">Copyright © 2011-2015 Sony Mobile Communications
+                  Inc. All rights reserved</p>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
